# CubeMX2CMake

./: .gitignore  CMakeLists.txt  Kconfig  README.md  env_setup.sh
UserCode/: CMakeLists.txt  Kconfig  userSystemInit.c  userSystemInit.h
UserCode/Drivers/: CMakeLists.txt
UserCode/Drivers/SEGGER_RTT_M0/: CMakeLists.txt
UserCode/Drivers/SEGGER_RTT_M3/: CMakeLists.txt
UserCode/Drivers/SEGGER_RTT_M4/: CMakeLists.txt  SEGGER_RTT_Conf.h  SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c
UserCode/Logger/: CMakeLists.txt  Logger.c  Logger.h
cmake/: gcc-arm-none-eabi.cmake  kconfig.cmake
cmake/modules/: MakeFileGrabber.cmake
configs/: test_app_debug_defconfig
scripts/kconfig/: kconfig.py
test073/: .mxproject  Makefile  STM32L073RZTx_FLASH.ld  test.ioc
test073/Core/Inc/: FreeRTOSConfig.h  main.h
test073/Core/Src/: main.c  stm32l0xx_hal_timebase_tim.c  stm32l0xx_it.c
test105/: .mxproject  Makefile  STM32F105RBTx_FLASH.ld  test105.ioc
test105/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
test105/Core/Src/: main.c  stm32f1xx_it.c
